--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
-/* .container {
-    background-color: black;
-} */
+nav {
+    background-color: #229799;
+}
+
+#overview {
+    background-color: #48CFCB;
+    margin: 0;
+}
+
+#education, #skills {
+    background-color: #F5F5F5;
+}
