--- a/style.css
+++ b/style.css
@@ -18,6 +18,6 @@ nav {
 #myCarousel {
     /* margin-left: 100px;
     margin-right: 200px; */
-    width: 100vh;
+/*     width: 100vh; */
     justify-content: center;
 }
