--- a/style.css
+++ b/style.css
@@ -1,9 +1,5 @@
 nav {
-    background-color: #229799;
-}
-
-body {
-    /* font-family: "Poppins", sans-serif; */
+    background-color: #17b8ba;
 }
 
 
