--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ nav {
     background-size: calc(1.732*var(--s)) var(--s);
   }
 
-#education, #skills , #workex, #interests{
+#education, #skills , #workex, #interests, #footer{
     background-color: #F5F5F5;
 }
 
