--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     background-color: #17b8ba;
 } */
 
-.top{
+.top, #footer{
 	/* background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab); */
     background: linear-gradient(-45deg, #6a05ed, #a21919, #ef7008, #ffffff);
 
