--- a/style.css
+++ b/style.css
@@ -69,6 +69,9 @@
 }
 
 h2 {
-    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
+    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
   
+.top {
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
+}
