--- a/style.css
+++ b/style.css
@@ -73,5 +73,6 @@ h2 {
 }
   
 .top {
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    height: 100vh;
 }
