--- a/style.css
+++ b/style.css
@@ -74,5 +74,11 @@ h2 {
   
 .top {
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    height: 100vh;
+/*     height: 100vh; */
+}
+
+@media only screen and (min-width: 600px) {
+    .top {
+      height: 100vh;
+    }
 }
