--- a/styles/style2.css
+++ b/styles/style2.css
@@ -1,5 +1,5 @@
 body{
-    background: linear-gradient(-45deg, blue, #a21919, #ef7008, #ffffff);
+    background: linear-gradient(-45deg, #FB773C, #EB3678, #4F1787, #180161);
 
 	background-size: 400% 400%;
 	animation: gradient 15s ease infinite;
