--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,6 @@
 .top, #footer{
-    background: linear-gradient(-45deg, #FB773C, #EB3678, #4F1787, #180161);
+/*     background: linear-gradient(-45deg, #FB773C, #EB3678, #4F1787, #180161); */
+    background: linear-gradient(-45deg, #000000, #7E6363, #3E3232, #000000);
     color: #F5F5F5;
 
 	background-size: 400% 400%;
